test/should_pass/record_var.erl
-module(record_var).

-record(rec, {apa}).

-spec f(A) -> A when A :: #rec{}.
f(#rec{}) -> #rec{}.
